# feedback-alignment-reprod

./: .gitignore  LICENSE  README.md  plot_all.py  presentation.tex  pyproject.toml  requirements.txt  run.py  run_all.sh
docs/: cli.md
report/: report.tex
src/: linear_task.py  mnist_task.py  nonlinear_task.py  plotting.py  utils.py
src/feedback_alignment/: __init__.py  algorithms.py  cli.py  core.py  io.py  layers.py  linear.py  mnist.py  nonlinear.py
tests/: test_fa_alignment.py  test_grad_check.py  test_shapes.py  test_utils.py
